--- a/frontend/src/views/user/login/Login.css
+++ b/frontend/src/views/user/login/Login.css
@@ -10,3 +10,10 @@
 .login-form-button {
     width: 100%;
 }
+
+@media(max-width: 767px){
+
+    .login-container{
+        padding: 1.5em;
+    }
+}
